# sm

./: CLAUDE.md  Makefile  README.md  pyproject.toml  sm.py
.github/workflows/: ci.yml  lint.yml
tests/: test_sm.py
tools/: demo_folder_menu.py  demo_read_ui.py  demo_read_with_errors.py  demo_sync_errors.py  helpers.py
